--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,7 +6,8 @@ assumeStandardLibraryStripMargin = true
 docstrings = JavaDoc
 lineEndings = preserve
 includeCurlyBraceInSelectChains = false
-danglingParentheses = true
+danglingParentheses.defnSite = true
+danglingParentheses.callSite = true
 spaces {
   inImportCurlyBraces = true
 }
